<resources>
    <string name="app_name">Mineapps</string>
    <string name="title_home">首页</string>
    <string name="title_apps">应用</string>
    <string name="title_mine">我的</string>

    <string name="title_activity_scheme">跳转中</string>
    <string name="title_activity_daily_assignment">每日任务</string>
    <string name="title_activity_point_task">积分任务</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登       录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">必填</string>

    <string name="apps_film">电影记录工具</string>
    <string name="apps_film_info">电影记录工具介绍</string>

    <string name="apps_show">电视剧记录工具</string>
    <string name="apps_show_info">电视剧记录工具简介</string>

    <string name="title_activity_film">电影列表</string>
    <string name="title_activity_show">电视剧列表</string>

    <string name="apps_film_add">添加电影</string>
    <string name="apps_film_modify">修改电影</string>
    <string name="apps_film_add_info">添加电影功能简介</string>

    <string name="apps_show_add">添加电视剧</string>
    <string name="apps_show_modify">修改电视剧</string>
    <string name="apps_show_add_info">添加电视剧功能简介</string>

    <string name="title_activity_film_info">电影信息</string>
    <string name="title_activity_show_info">电视剧信息</string>

    <!--添加电影-->
    <string name="prompt_film_name">电影名称</string>
    <string name="prompt_produce_year">出品年份</string>
    <string name="prompt_director">导演</string>
    <string name="prompt_cinema">电影院</string>
    <string name="prompt_douban_score">豆瓣评分</string>
    <string name="prompt_douban_key">豆瓣 ID</string>
    <string name="prompt_view_date">观影日期</string>
    <string name="prompt_remark">备注</string>
    <string name="action_submit">提交</string>

    <!--添加电视剧-->
    <string name="prompt_show_name">电视剧名字</string>
    <string name="prompt_tv">出品</string>
    <string name="prompt_begin_date">开始日期</string>
    <string name="prompt_show_season">季</string>
    <string name="prompt_show_episode">集</string>

    <!--电影列表-->
    <string name="hint_query_keyword">请输入要搜索的关键字</string>

    <string name="ok">确定</string>
    <string name="close">关闭</string>
    <string name="cancle">取消</string>
    <string name="action_clear">清空</string>
    <string name="action_reset">重置</string>
    <string name="prompt_number">请输入数字</string>
    <string name="logout">退出</string>

    <string name="head_apps_add">添加记录新数据</string>
    <string name="head_apps_list">查询记录的数据</string>
    <string name="ciname_manage">电影院管理</string>
    <string name="apps_assignment">今日任务</string>
    <string name="apps_assignment_info">今日任务工具简介</string>
    <string name="apps_task">积分任务</string>
    <string name="apps_task_info">积分与任务</string>

    <string-array name="showStatus">
        <item>收看</item>
        <item>已停</item>
        <item>全部</item>
    </string-array>

</resources>
